[gd_scene load_steps=9 format=3 uid="uid://4jyyoybb770p"]

[ext_resource type="Script" path="res://clicker.gd" id="1_17grq"]
[ext_resource type="StyleBox" uid="uid://c7upijhw1d262" path="res://Styles/clickerbuttongoblinoff.tres" id="2_14p8r"]
[ext_resource type="StyleBox" uid="uid://bfaasdrypn7gr" path="res://Styles/clickerbuttongoblinoon.tres" id="3_sjeer"]
[ext_resource type="Texture2D" uid="uid://bki8gh1rmkou7" path="res://Sprites/upgrade1.png" id="4_srw8w"]
[ext_resource type="Texture2D" uid="uid://njr2pjk4li8d" path="res://Sprites/upgrade2.png" id="5_cp4a3"]

[sub_resource type="LabelSettings" id="LabelSettings_lqnox"]
font_size = 32
font_color = Color(1, 0.87451, 0.447059, 1)
outline_size = 2
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.384314)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3d7rx"]
texture = ExtResource("4_srw8w")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kh4ey"]
texture = ExtResource("5_cp4a3")

[node name="Node" type="Node" groups=["Persist"]]
script = ExtResource("1_17grq")

[node name="Button" type="Button" parent="." groups=["Persist"]]
offset_right = 1080.0
offset_bottom = 2400.0
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_styles/normal = ExtResource("2_14p8r")
theme_override_styles/hover = ExtResource("2_14p8r")
theme_override_styles/pressed = ExtResource("3_sjeer")
theme_override_styles/disabled = ExtResource("2_14p8r")
action_mode = 0
icon_alignment = 1

[node name="Score" type="Label" parent="." groups=["Persist"]]
offset_left = 505.0
offset_top = 933.0
offset_right = 600.0
offset_bottom = 1015.0
label_settings = SubResource("LabelSettings_lqnox")
horizontal_alignment = 1
uppercase = true

[node name="Scoregain" type="Label" parent="." groups=["Persist"]]
offset_left = 299.0
offset_top = 17.0
offset_right = 339.0
offset_bottom = 40.0
scale = Vector2(1.21016, 1.46733)

[node name="upgradeclick" type="Button" parent="." groups=["Persist"]]
offset_left = 35.0
offset_top = 130.0
offset_right = 185.0
offset_bottom = 280.0
theme_override_styles/normal = SubResource("StyleBoxTexture_3d7rx")
theme_override_styles/hover = SubResource("StyleBoxTexture_3d7rx")
theme_override_styles/pressed = SubResource("StyleBoxTexture_3d7rx")
theme_override_styles/disabled = SubResource("StyleBoxTexture_3d7rx")
theme_override_styles/focus = SubResource("StyleBoxTexture_3d7rx")

[node name="upgradeauto" type="Button" parent="." groups=["Persist"]]
offset_left = 200.0
offset_top = 130.0
offset_right = 350.0
offset_bottom = 280.0
theme_override_styles/normal = SubResource("StyleBoxTexture_kh4ey")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="upgradeclick" to="." method="_on_upgradeclick_pressed"]
[connection signal="pressed" from="upgradeauto" to="." method="_on_upgradeauto_pressed"]
